# expyDB

./: pyproject.toml
.github/workflows/: python-publish.yml
experiment-db/: __init__.py  blast_query.md  database_model.py  database_query_obs_treatment.py  dataset_3_processing.py  extract_microarray_data.sh  sequence.fasta
experimentDB/: __init__.py  database_add_data.py  database_model.py  database_operations.py  database_query_obs_treatment.py
expyDB/: __init__.py  database_operations.py  intervention_model.py
scripts/: database_add_data.py  database_model.py  dataset_1_read_microarray.R  dataset_2_processing.py  dataset_3_processing.py
tests/: test_intervention_model.py
